Fix card paddings on mobile, fix minor issues

--- a/styles/style.css
+++ b/styles/style.css
@@ -37,8 +37,8 @@
   justify-content: center;
   align-items: center;
   gap: 20px;
+  margin-block-end: 96px;
   padding: 130px 16px;
-  margin-block-end: 98px;
   font-family: var(--accent-font);
   text-align: center;
   text-transform: uppercase;
@@ -58,7 +58,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  gap: 48px;
+  gap: 50px;
   inline-size: var(--content-inline-size);
 }
 
@@ -135,18 +135,18 @@
   display: flex;
   justify-content: center;
   align-items: center;
+
+  overflow: hidden;
   color: #fff;
-  background-color: #fff;
   font-family: var(--accent-font);
   font-size: 14px;
   line-height: 90%;
-  padding: 0;
-  overflow: hidden;
+  background-color: #fff;
 }
 
 .card__like-button {
-  transition: box-shadow 0.3s;
   width: 130px;
+  transition: box-shadow 0.3s;
 }
 
 .card__icon-button {
@@ -214,7 +214,6 @@
 
 .save-dialog {
   position: fixed;
-  font-size: 14px;
   inset: 0 0 0 0;
   display: none;
   flex-direction: column;
@@ -222,6 +221,7 @@
   min-width: 340px;
   max-width: 350px;
   padding: 30px;
+  font-size: 14px;
 }
 
 .save-dialog[open] {
@@ -240,8 +240,8 @@ body:has(.save-dialog[open]) {
   display: grid;
   grid-template-columns: min-content auto;
   gap: 20px;
-  text-transform: uppercase;
   line-height: 150%;
+  text-transform: uppercase;
 }
 
 .save-dialog__text {
@@ -256,8 +256,8 @@ body:has(.save-dialog[open]) {
 .dialog__save-button {
   grid-column: 1 / 3;
   padding: 10px 130px;
-  transition: box-shadow 0.3s;
   text-transform: uppercase;
+  transition: box-shadow 0.3s;
 }
 
 .floppy {
@@ -384,12 +384,17 @@ body:has(.save-dialog[open]) {
 }
 
 @media (width <= 375px) {
-  .page {
-    gap: 100px;
+  .header {
+    margin-block-end: 100px;
+    padding: 120px 16px;
   }
 
-  .header {
-    padding: 120px 16px;
+  .card__heading {
+    padding: 6px 10px;
+  }
+
+  .content {
+    gap: 46px;
   }
 
   .content__save-button {
